Se modifico archivo a tabla

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,26 @@
 <html>
 	<body>
-		<h1> Primer ejemplo de HTML </h1>
+		<table>
+			<tr>
+				<td>Introduccion
+				</td>
+			</tr>
+			<tr>
+				<td>Python
+				</td>
+			</tr>
+			<tr>
+				<td>MongoDB
+				</td>
+			</tr>
+			<tr>
+				<td>Git
+				</td>
+			</tr>
+			<tr>
+				<td>HTML
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
