Se le agrego CSS al archivo

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,27 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+	<style>
+		h1{
+			background-color: black;
+			color: white;
+			padding-left: 50px;
+		}
+		table{
+			color: blue;
+		}
+	</style>
 </head>
 	<body>
+		<h1>Temas</h1>
 		<table>
 			<tr>
-				<td>Introducción
+				<td>
+					Introducción
 				</td>
 			</tr>
 			<tr>
-				<td>Python
+				<td>
+					Python
 				</td>
 			</tr>
 			<tr>
-				<td>MongoDB
+				<td>
+					MongoDB
 				</td>
 			</tr>
 			<tr>
-				<td>Git
+				<td>
+					Git
 				</td>
 			</tr>
 			<tr>
-				<td>HTML
+				<td>
+					HTML
+				</td>
+			</tr>
+			<tr>
+				<td>
+					CSS
 				</td>
 			</tr>
 		</table>
