--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,7 @@
 		h1{
 			background-color: black;
 			color: white;
-			padding-left: 50px;
+			text-align: center;
 		}
 		table{
 			color: blue;
